--- a/.github/workflows/Szenario D.yml
+++ b/.github/workflows/Szenario D.yml
@@ -2,34 +2,33 @@ name: scenario-d-risk-based-flask
 
 on:
   push:
-    paths:
-      - "backend/**"
+    paths-ignore:
+      - "**/*.md"
   pull_request:
-    paths:
-      - "backend/**"
+    paths-ignore:
+      - "**/*.md"
   schedule:
-    - cron: '0 0 * * *'  # nightly run for SCA
+    - cron: '0 0 * * *'   # Nightly SCA
 
 permissions:
   contents: read
 
 jobs:
 
-  # -------------------
-  # SAST - Bandit + Semgrep
-  # -------------------
+  # ===================
+  # SAST – Bandit + Semgrep (Push / PR)
+  # ===================
   sast:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'pull_request'
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
 
       - name: Prepare directories
         run: mkdir -p results/raw
 
       # --- Bandit ---
-      - name: Set up Python & Bandit
+      - name: Set up Python
         uses: actions/setup-python@v5
         with:
           python-version: "3.11"
@@ -43,10 +42,10 @@ jobs:
       - name: Run Semgrep
         run: |
           docker run --rm \
-            --cpus="2" --memory="4g" \
             -v "$PWD:/src" \
             returntocorp/semgrep:1.75.0 \
-            semgrep scan --config=p/ci \
+            semgrep scan \
+              --config=p/ci \
               --json \
               --output=/src/results/raw/semgrep.json \
               --metrics=off || true
@@ -58,45 +57,14 @@ jobs:
           path: results/raw
           if-no-files-found: warn
 
-  # -------------------
-  # SCA - Trivy FS (Nightly)
-  # -------------------
-  sca:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'schedule'
-    steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
-
-      - name: Prepare directories
-        run: mkdir -p results/raw
-
-      - name: Run Trivy FS Scan
-        run: |
-          docker run --rm \
-            --cpus="2" --memory="4g" \
-            -v "$PWD:/src" \
-            aquasec/trivy:0.49.1 \
-            fs /src --scanners vuln,misconfig \
-              --format json \
-              --output /src/results/raw/trivy-fs.json || true
-
-      - name: Upload SCA report
-        uses: actions/upload-artifact@v4
-        with:
-          name: sca-report
-          path: results/raw/trivy-fs.json
-          if-no-files-found: warn
-
-  # -------------------
-  # Secrets - Gitleaks
-  # -------------------
+  # ===================
+  # Secrets – Gitleaks (Push / PR)
+  # ===================
   secrets:
     runs-on: ubuntu-latest
     if: github.event_name == 'push' || github.event_name == 'pull_request'
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
 
       - name: Prepare directories
         run: mkdir -p results/raw
@@ -104,7 +72,6 @@ jobs:
       - name: Run Gitleaks
         run: |
           docker run --rm \
-            --cpus="1" --memory="2g" \
             -v "$PWD:/src" \
             zricethezav/gitleaks detect \
               --source=/src \
@@ -119,42 +86,87 @@ jobs:
           path: results/raw/gitleaks.json
           if-no-files-found: warn
 
-  # -------------------
-  # DAST - ZAP Baseline Scan (nur Main/Release)
-  # -------------------
+  # ===================
+  # SCA – Trivy FS (Nightly only)
+  # ===================
+  sca:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'schedule'
+    steps:
+      - uses: actions/checkout@v5
+
+      - name: Prepare directories
+        run: mkdir -p results/raw
+
+      - name: Run Trivy FS Scan
+        run: |
+          docker run --rm \
+            -v "$PWD:/src" \
+            aquasec/trivy:0.49.1 \
+            fs /src \
+              --scanners vuln,misconfig \
+              --format json \
+              --output /src/results/raw/trivy-fs.json || true
+
+      - name: Upload SCA report
+        uses: actions/upload-artifact@v4
+        with:
+          name: sca-report
+          path: results/raw/trivy-fs.json
+          if-no-files-found: warn
+
+  # ===================
+  # DAST – ZAP (Main / Release only)
+  # ===================
   zap:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || startsWith(github.ref, 'refs/heads/release/')
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v5
+      - uses: actions/checkout@v5
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          pip install -r requirements.txt
 
       - name: Start Vulnerable Flask App
         run: |
-          docker rm -f vfa || true
-          docker run -d --name vfa -p 5000:5000 videvelopers/vulnerable-flask-app
+          nohup python vulnerable-flask-app-linux.py > flask.log 2>&1 &
+          sleep 5
 
       - name: Wait for Flask App
         run: |
-          for i in {1..30}; do
-            if curl -s http://localhost:5000 > /dev/null; then
+          for i in {1..20}; do
+            if curl -s http://localhost:8081 > /dev/null; then
               echo "Flask App ready for DAST"
               exit 0
             fi
-            sleep 5
+            sleep 3
           done
-          echo "Flask App did not start in time"
+          echo "Flask App did not start"
+          cat flask.log
           exit 1
 
       - name: Run ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.15.0
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          target: http://localhost:8081
           docker_name: ghcr.io/zaproxy/zaproxy:stable
-          target: http://localhost:5000
           cmd_options: "-a"
           fail_action: false
-          artifact_name: zap_baseline_scan
+          artifact_name: zap-baseline-report
+          token: ${{ secrets.ZAP_GITHUB_TOKEN }}
+          allow_issue_writing: true
+          issue_title: "ZAP Risk-Based Baseline Report"
 
-      - name: Cleanup Flask App
-        run: docker rm -f vfa || true
+      - name: Upload Flask logs
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: flask-runtime-log
+          path: flask.log
+          if-no-files-found: warn
