--- a/.github/workflows/Szenario B.yml
+++ b/.github/workflows/Szenario B.yml
@@ -11,177 +11,89 @@ permissions:
 
 jobs:
 
-  # -------------------
-  # 1. Gitleaks – Secrets
-  # -------------------
   gitleaks:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
-
-      - name: Prepare directories
-        run: mkdir -p results/raw
-
-      - name: Run Gitleaks
-        run: |
-          docker run --rm \
-            -v "$PWD:/src" \
-            zricethezav/gitleaks detect \
-              --source=/src \
-              --report-format json \
-              --report-path /src/results/raw/gitleaks.json \
-              --no-git || true
-
+      - run: mkdir -p results/raw
+      - run: |
+          docker run --rm -v "$PWD:/src" zricethezav/gitleaks detect \
+            --source=/src --no-git \
+            --report-format json \
+            --report-path /src/results/raw/gitleaks.json || true
       - uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
           path: results/raw/gitleaks.json
-          if-no-files-found: warn
 
-
-  # -------------------
-  # 2. Semgrep – SAST
-  # -------------------
   semgrep:
     runs-on: ubuntu-latest
     needs: gitleaks
     steps:
       - uses: actions/checkout@v5
-
-      - name: Prepare directories
-        run: mkdir -p results/raw
-
-      - name: Run Semgrep
-        run: |
-          docker run --rm \
-            -v "$PWD:/src" \
-            returntocorp/semgrep:1.75.0 \
-            semgrep scan \
-              --config=p/ci \
-              --json \
-              --output=/src/results/raw/semgrep.json \
-              --metrics=off || true
-
+      - run: mkdir -p results/raw
+      - run: |
+          docker run --rm -v "$PWD:/src" returntocorp/semgrep:1.75.0 \
+            semgrep scan --config=p/ci --json \
+            --output=/src/results/raw/semgrep.json \
+            --metrics=off || true
       - uses: actions/upload-artifact@v4
         with:
           name: semgrep-report
           path: results/raw/semgrep.json
-          if-no-files-found: warn
 
-
-  # -------------------
-  # 3. Bandit – Python SAST / IAST-light
-  # -------------------
   bandit:
     runs-on: ubuntu-latest
     needs: semgrep
     steps:
       - uses: actions/checkout@v5
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
-      - name: Install Bandit
-        run: pip install bandit
-
-      - name: Prepare directories
-        run: mkdir -p results/raw
-
-      - name: Run Bandit
-        run: |
-          bandit -r . -f json -o results/raw/bandit.json || true
-
+      - run: |
+          pip install bandit
+          mkdir -p results/raw
+          bandit -r . -lll -f json -o results/raw/bandit.json || true
       - uses: actions/upload-artifact@v4
         with:
           name: bandit-report
           path: results/raw/bandit.json
-          if-no-files-found: warn
 
-
-  # -------------------
-  # 4. Trivy – SCA (FS)
-  # -------------------
   trivy:
     runs-on: ubuntu-latest
     needs: bandit
     steps:
       - uses: actions/checkout@v5
-
-      - name: Prepare directories
-        run: mkdir -p results/raw
-
-      - name: Run Trivy FS scan
-        run: |
-          docker run --rm \
-            -v "$PWD:/src" \
-            aquasec/trivy:0.49.1 \
+      - run: mkdir -p results/raw
+      - run: |
+          docker run --rm -v "$PWD:/src" aquasec/trivy:0.49.1 \
             fs /src \
-              --scanners vuln,misconfig \
-              --format json \
-              --output /src/results/raw/trivy-fs.json || true
-
+            --scanners vuln,license \
+            --severity LOW,MEDIUM,HIGH,CRITICAL \
+            --format json \
+            --output /src/results/raw/trivy.json || true
       - uses: actions/upload-artifact@v4
         with:
           name: trivy-report
-          path: results/raw/trivy-fs.json
-          if-no-files-found: warn
+          path: results/raw/trivy.json
 
-
-  # -------------------
-  # 5. ZAP – DAST (last)
-  # -------------------
   zap:
     runs-on: ubuntu-latest
     needs: trivy
     steps:
       - uses: actions/checkout@v5
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Start Vulnerable Flask App
-        run: |
-          nohup python vulnerable-flask-app-linux.py > flask.log 2>&1 &
-          sleep 5
-
-      - name: Wait for Flask App
-        run: |
-          for i in {1..20}; do
-            if curl -s http://localhost:8081 > /dev/null; then
-              echo "Flask App ready for DAST"
-              exit 0
-            fi
-            sleep 3
-          done
-          echo "Flask App did not start"
-          cat flask.log
-          exit 1
-
-      - name: ZAP Baseline Scan
-        uses: zaproxy/action-baseline@v0.15.0
+      - run: pip install -r requirements.txt
+      - run: nohup python vulnerable-flask-app-linux.py > flask.log 2>&1 &
+      - run: sleep 10
+      - uses: zaproxy/action-baseline@v0.15.0
         with:
           target: http://localhost:8081
-          docker_name: ghcr.io/zaproxy/zaproxy:stable
           cmd_options: "-a"
           fail_action: false
-          artifact_name: zap-baseline-report
-          token: ${{ secrets.ZAP_GITHUB_TOKEN }}
-          allow_issue_writing: true
-          issue_title: "ZAP Scan Baseline Report"
-
-      - name: Upload Flask logs
-        if: always()
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
-          name: flask-runtime-log
+          name: flask-log
           path: flask.log
-          if-no-files-found: warn
