--- a/.github/workflows/Szenario C.yml
+++ b/.github/workflows/Szenario C.yml
@@ -11,9 +11,9 @@ permissions:
 
 jobs:
 
-  # ===================
-  # 1. SAST – Bandit
-  # ===================
+  # =====================================================
+  # 1. SAST – Bandit (FAIL-FAST)
+  # =====================================================
   bandit:
     runs-on: ubuntu-latest
     steps:
@@ -27,32 +27,30 @@ jobs:
       - name: Prepare directories
         run: mkdir -p results/raw
 
-      - name: Run Bandit
+      - name: Run Bandit (full depth)
         run: |
           pip install bandit
-          bandit -r . -f json -o results/raw/bandit.json || true
+          bandit -r . -lll -f json -o results/raw/bandit.json || true
 
       - name: Upload Bandit report
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: bandit-report
           path: results/raw/bandit.json
-          if-no-files-found: warn
+          if-no-files-found: error
 
       - name: Fail-Fast – Bandit HIGH findings
         run: |
           HIGH_COUNT=$(jq '[.results[] | select(.issue_severity=="HIGH")] | length' results/raw/bandit.json)
           echo "Bandit HIGH findings: $HIGH_COUNT"
-
           if [ "$HIGH_COUNT" -gt 0 ]; then
             echo "❌ Fail-Fast: Bandit HIGH severity issues detected"
             exit 1
           fi
 
-  # ===================
-  # 2. SAST – Semgrep
-  # ===================
+  # =====================================================
+  # 2. SAST – Semgrep (FAIL-FAST)
+  # =====================================================
   semgrep:
     runs-on: ubuntu-latest
     needs: bandit
@@ -62,7 +60,7 @@ jobs:
       - name: Prepare directories
         run: mkdir -p results/raw
 
-      - name: Run Semgrep
+      - name: Run Semgrep (full depth)
         run: |
           docker run --rm \
             -v "$PWD:/src" \
@@ -74,26 +72,24 @@ jobs:
               --metrics=off || true
 
       - name: Upload Semgrep report
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: semgrep-report
           path: results/raw/semgrep.json
-          if-no-files-found: warn
+          if-no-files-found: error
 
       - name: Fail-Fast – Semgrep CRITICAL findings
         run: |
           CRITICAL_COUNT=$(jq '[.results[] | select(.extra.severity=="CRITICAL")] | length' results/raw/semgrep.json)
           echo "Semgrep CRITICAL findings: $CRITICAL_COUNT"
-
           if [ "$CRITICAL_COUNT" -gt 0 ]; then
             echo "❌ Fail-Fast: Semgrep CRITICAL findings detected"
             exit 1
           fi
 
-  # ===================
-  # 3. SCA – Trivy FS
-  # ===================
+  # =====================================================
+  # 3. SCA – Trivy FS (FAIL-FAST)
+  # =====================================================
   trivy:
     runs-on: ubuntu-latest
     needs: semgrep
@@ -103,38 +99,36 @@ jobs:
       - name: Prepare directories
         run: mkdir -p results/raw
 
-      - name: Run Trivy FS scan
+      - name: Run Trivy FS scan (full depth)
         run: |
           docker run --rm \
             -v "$PWD:/src" \
             aquasec/trivy:0.49.1 \
             fs /src \
-              --scanners vuln,misconfig \
-              --severity CRITICAL,HIGH \
+              --scanners vuln,license \
+              --severity LOW,MEDIUM,HIGH,CRITICAL \
               --format json \
-              --output /src/results/raw/trivy-fs.json || true
+              --output /src/results/raw/trivy.json || true
 
       - name: Upload Trivy report
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: trivy-report
-          path: results/raw/trivy-fs.json
-          if-no-files-found: warn
+          path: results/raw/trivy.json
+          if-no-files-found: error
 
       - name: Fail-Fast – Trivy CRITICAL vulnerabilities
         run: |
-          CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")] | length' results/raw/trivy-fs.json)
+          CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")] | length' results/raw/trivy.json)
           echo "Trivy CRITICAL findings: $CRITICAL_COUNT"
-
           if [ "$CRITICAL_COUNT" -gt 0 ]; then
             echo "❌ Fail-Fast: Trivy CRITICAL vulnerabilities detected"
             exit 1
           fi
 
-  # ===================
-  # 4. Secrets – Gitleaks
-  # ===================
+  # =====================================================
+  # 4. Secrets – Gitleaks (FAIL-FAST)
+  # =====================================================
   gitleaks:
     runs-on: ubuntu-latest
     needs: trivy
@@ -150,31 +144,29 @@ jobs:
             -v "$PWD:/src" \
             zricethezav/gitleaks detect \
               --source=/src \
+              --no-git \
               --report-format json \
-              --report-path /src/results/raw/gitleaks.json \
-              --no-git || true
+              --report-path /src/results/raw/gitleaks.json || true
 
       - name: Upload Gitleaks report
-        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
           path: results/raw/gitleaks.json
-          if-no-files-found: warn
+          if-no-files-found: error
 
       - name: Fail-Fast – Secrets detected
         run: |
           COUNT=$(jq 'length' results/raw/gitleaks.json)
           echo "Gitleaks findings: $COUNT"
-
           if [ "$COUNT" -gt 0 ]; then
             echo "❌ Fail-Fast: Secrets detected"
             exit 1
           fi
 
-  # ===================
-  # 5. DAST – ZAP Baseline
-  # ===================
+  # =====================================================
+  # 5. DAST – OWASP ZAP (ONLY IF CLEAN)
+  # =====================================================
   zap:
     runs-on: ubuntu-latest
     needs: gitleaks
@@ -187,18 +179,18 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: |
-          pip install -r requirements.txt
+        run: pip install -r requirements.txt
 
       - name: Start Vulnerable Flask App
         run: |
           nohup python vulnerable-flask-app-linux.py > flask.log 2>&1 &
-          sleep 5
+          sleep 10
 
       - name: Wait for Flask App
         run: |
           for i in {1..20}; do
             if curl -s http://localhost:8081 > /dev/null; then
+              echo "Flask App ready for DAST"
               exit 0
             fi
             sleep 3
@@ -207,14 +199,14 @@ jobs:
           cat flask.log
           exit 1
 
-      - name: ZAP Baseline Scan
+      - name: ZAP Baseline Scan (full passive policy)
         uses: zaproxy/action-baseline@v0.15.0
         with:
           target: http://localhost:8081
           docker_name: ghcr.io/zaproxy/zaproxy:stable
           cmd_options: "-a"
           fail_action: true
-          artifact_name: zap-baseline-report
+          artifact_name: zap-fail-fast-report
           token: ${{ secrets.ZAP_GITHUB_TOKEN }}
           allow_issue_writing: true
           issue_title: "ZAP Fail-Fast Baseline Report"
@@ -225,3 +217,4 @@ jobs:
         with:
           name: flask-runtime-log
           path: flask.log
+          if-no-files-found: warn
