--- a/.github/workflows/Szenario C.yml
+++ b/.github/workflows/Szenario C.yml
@@ -11,9 +11,9 @@ permissions:
 
 jobs:
 
-  # =====================================================
-  # 1. SAST – Bandit (FAIL-FAST)
-  # =====================================================
+  # ===================
+  # 1. SAST – Bandit
+  # ===================
   bandit:
     runs-on: ubuntu-latest
     steps:
@@ -27,30 +27,32 @@ jobs:
       - name: Prepare directories
         run: mkdir -p results/raw
 
-      - name: Run Bandit (full depth)
+      - name: Run Bandit
         run: |
           pip install bandit
-          bandit -r . -lll -f json -o results/raw/bandit.json || true
+          bandit -r . -f json -o results/raw/bandit.json || true
 
       - name: Upload Bandit report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: bandit-report
           path: results/raw/bandit.json
-          if-no-files-found: error
+          if-no-files-found: warn
 
       - name: Fail-Fast – Bandit HIGH findings
         run: |
           HIGH_COUNT=$(jq '[.results[] | select(.issue_severity=="HIGH")] | length' results/raw/bandit.json)
           echo "Bandit HIGH findings: $HIGH_COUNT"
+
           if [ "$HIGH_COUNT" -gt 0 ]; then
             echo "❌ Fail-Fast: Bandit HIGH severity issues detected"
             exit 1
           fi
 
-  # =====================================================
-  # 2. SAST – Semgrep (FAIL-FAST)
-  # =====================================================
+  # ===================
+  # 2. SAST – Semgrep
+  # ===================
   semgrep:
     runs-on: ubuntu-latest
     needs: bandit
@@ -60,7 +62,7 @@ jobs:
       - name: Prepare directories
         run: mkdir -p results/raw
 
-      - name: Run Semgrep (full depth)
+      - name: Run Semgrep
         run: |
           docker run --rm \
             -v "$PWD:/src" \
@@ -72,24 +74,26 @@ jobs:
               --metrics=off || true
 
       - name: Upload Semgrep report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: semgrep-report
           path: results/raw/semgrep.json
-          if-no-files-found: error
+          if-no-files-found: warn
 
       - name: Fail-Fast – Semgrep CRITICAL findings
         run: |
           CRITICAL_COUNT=$(jq '[.results[] | select(.extra.severity=="CRITICAL")] | length' results/raw/semgrep.json)
           echo "Semgrep CRITICAL findings: $CRITICAL_COUNT"
+
           if [ "$CRITICAL_COUNT" -gt 0 ]; then
             echo "❌ Fail-Fast: Semgrep CRITICAL findings detected"
             exit 1
           fi
 
-  # =====================================================
-  # 3. SCA – Trivy FS (FAIL-FAST)
-  # =====================================================
+  # ===================
+  # 3. SCA – Trivy FS
+  # ===================
   trivy:
     runs-on: ubuntu-latest
     needs: semgrep
@@ -99,36 +103,38 @@ jobs:
       - name: Prepare directories
         run: mkdir -p results/raw
 
-      - name: Run Trivy FS scan (full depth)
+      - name: Run Trivy FS scan
         run: |
           docker run --rm \
             -v "$PWD:/src" \
             aquasec/trivy:0.49.1 \
             fs /src \
-              --scanners vuln,license \
-              --severity LOW,MEDIUM,HIGH,CRITICAL \
+              --scanners vuln,misconfig \
+              --severity CRITICAL,HIGH \
               --format json \
-              --output /src/results/raw/trivy.json || true
+              --output /src/results/raw/trivy-fs.json || true
 
       - name: Upload Trivy report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: trivy-report
-          path: results/raw/trivy.json
-          if-no-files-found: error
+          path: results/raw/trivy-fs.json
+          if-no-files-found: warn
 
       - name: Fail-Fast – Trivy CRITICAL vulnerabilities
         run: |
-          CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")] | length' results/raw/trivy.json)
+          CRITICAL_COUNT=$(jq '[.Results[].Vulnerabilities[]? | select(.Severity=="CRITICAL")] | length' results/raw/trivy-fs.json)
           echo "Trivy CRITICAL findings: $CRITICAL_COUNT"
+
           if [ "$CRITICAL_COUNT" -gt 0 ]; then
             echo "❌ Fail-Fast: Trivy CRITICAL vulnerabilities detected"
             exit 1
           fi
 
-  # =====================================================
-  # 4. Secrets – Gitleaks (FAIL-FAST)
-  # =====================================================
+  # ===================
+  # 4. Secrets – Gitleaks
+  # ===================
   gitleaks:
     runs-on: ubuntu-latest
     needs: trivy
@@ -144,29 +150,31 @@ jobs:
             -v "$PWD:/src" \
             zricethezav/gitleaks detect \
               --source=/src \
-              --no-git \
               --report-format json \
-              --report-path /src/results/raw/gitleaks.json || true
+              --report-path /src/results/raw/gitleaks.json \
+              --no-git || true
 
       - name: Upload Gitleaks report
+        if: always()
         uses: actions/upload-artifact@v4
         with:
           name: gitleaks-report
           path: results/raw/gitleaks.json
-          if-no-files-found: error
+          if-no-files-found: warn
 
       - name: Fail-Fast – Secrets detected
         run: |
           COUNT=$(jq 'length' results/raw/gitleaks.json)
           echo "Gitleaks findings: $COUNT"
+
           if [ "$COUNT" -gt 0 ]; then
             echo "❌ Fail-Fast: Secrets detected"
             exit 1
           fi
 
-  # =====================================================
-  # 5. DAST – OWASP ZAP (ONLY IF CLEAN)
-  # =====================================================
+  # ===================
+  # 5. DAST – ZAP Baseline
+  # ===================
   zap:
     runs-on: ubuntu-latest
     needs: gitleaks
@@ -179,18 +187,18 @@ jobs:
           python-version: "3.11"
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
 
       - name: Start Vulnerable Flask App
         run: |
           nohup python vulnerable-flask-app-linux.py > flask.log 2>&1 &
-          sleep 10
+          sleep 5
 
       - name: Wait for Flask App
         run: |
           for i in {1..20}; do
             if curl -s http://localhost:8081 > /dev/null; then
-              echo "Flask App ready for DAST"
               exit 0
             fi
             sleep 3
@@ -199,14 +207,14 @@ jobs:
           cat flask.log
           exit 1
 
-      - name: ZAP Baseline Scan (full passive policy)
+      - name: ZAP Baseline Scan
         uses: zaproxy/action-baseline@v0.15.0
         with:
           target: http://localhost:8081
           docker_name: ghcr.io/zaproxy/zaproxy:stable
           cmd_options: "-a"
           fail_action: true
-          artifact_name: zap-fail-fast-report
+          artifact_name: zap-baseline-report
           token: ${{ secrets.ZAP_GITHUB_TOKEN }}
           allow_issue_writing: true
           issue_title: "ZAP Fail-Fast Baseline Report"
@@ -217,4 +225,3 @@ jobs:
         with:
           name: flask-runtime-log
           path: flask.log
-          if-no-files-found: warn
