--- a/.github/workflows/fullzap.yml
+++ b/.github/workflows/fullzap.yml
@@ -7,7 +7,6 @@ on:
 
 permissions:
   contents: read
-  issues: write
 
 jobs:
   zap:
@@ -16,17 +15,14 @@ jobs:
     steps:
       - uses: actions/checkout@v5
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
+      - run: |
           pip install -r requirements.txt
 
-      - name: Start Vulnerable Flask App
+      - name: Start Flask App
         run: |
           nohup python vulnerable-flask-app-linux.py > flask.log 2>&1 &
           sleep 5
@@ -34,10 +30,7 @@ jobs:
       - name: Wait for Flask App
         run: |
           for i in {1..20}; do
-            if curl -s http://localhost:8081 > /dev/null; then
-              echo "Flask App ready"
-              exit 0
-            fi
+            curl -s http://localhost:8081 && exit 0
             sleep 3
           done
           cat flask.log
@@ -49,12 +42,5 @@ jobs:
           target: http://localhost:8081
           docker_name: ghcr.io/zaproxy/zaproxy:stable
           fail_action: false
-          artifact_name: zap-full-report-flask
+          artifact_name: zapfullflask
           token: ${{ secrets.ZAP_GITHUB_TOKEN }}
-
-      - name: Upload Flask logs
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: flask-runtime-log
-          path: flask.log
