--- a/.github/workflows/fullzap.yml
+++ b/.github/workflows/fullzap.yml
@@ -46,5 +46,5 @@ jobs:
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: flask-log
+          name: flask-runtime-log
           path: flask.log
