--- a/.github/workflows/fullzap.yml
+++ b/.github/workflows/fullzap.yml
@@ -3,23 +3,24 @@ name: fullzap
 on:
   workflow_dispatch:
   push:
-
-permissions:
-  contents: read
+    branches: [ main ]
 
 jobs:
-  zap:
+  zap_scan:
     runs-on: ubuntu-latest
+    name: ZAP Full Scan – Flask App
 
     steps:
-      - uses: actions/checkout@v5
+      - name: Checkout
+        uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
           python-version: "3.11"
 
-      - run: |
-          pip install -r requirements.txt
+      - name: Install dependencies
+        run: pip install -r requirements.txt
 
       - name: Start Flask App
         run: |
@@ -35,16 +36,9 @@ jobs:
           cat flask.log
           exit 1
 
-      - name: ZAP Full Scan
-        uses: zaproxy/action-full-scan@v0.10.0
+      - name: ZAP Scan
+        uses: zaproxy/action-full-scan@v0.13.0
         with:
           target: http://localhost:8081
           docker_name: ghcr.io/zaproxy/zaproxy:stable
-          fail_action: false
-
-      - name: Upload Flask Log
-        if: always()
-        uses: actions/upload-artifact@v4
-        with:
-          name: flask-runtime-log
-          path: flask.log
+          token: ${{ secrets.GITHUB_TOKEN }}
